simplify configure and Makefiles

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 include config.h
 
 install:
-	cd sander && $(MAKE) install
+	cd sander && $(MAKE) msander
 
 clean:
 	-(cd arpack && $(MAKE) clean )
