--- a/src/sander/Makefile
+++ b/src/sander/Makefile
@@ -67,7 +67,7 @@ MMOBJ=  file_io_dat.o constants.o state.o memory_module.o stack.o \
     new_time.o extra_pts.o thermo_int.o \
     matinv.o assert.o erfcfun.o sinr_t.o md_scheme.o \
     constantph.o constante.o prn_dipoles.o ips.o sglds.o iwrap2.o emap.o\
-    $(AMOEBAOBJ) $(SANDER_RISM_INTERFACE) AmberNetcdf.o bintraj.o binrestart.o \
+    $(AMOEBAOBJ) AmberNetcdf.o bintraj.o binrestart.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o linear_response.o molecule.o xref.o dssp.o \
     charmm.o crg_reloc.o amd.o scaledMD.o barostats.o random.o les.o music_module.o
 
@@ -95,8 +95,7 @@ LESOBJ= memory_module.o stack.o file_io_dat.o \
     new_time.o extra_pts.LES.o thermo_int.o matinv.o assert.o \
     erfcfun.o sinr_t.o md_scheme.LES.o \
     constantph.o constante.o prn_dipoles.o ips.o sglds.o iwrap2.o emap.o \
-    $(AMOEBAOBJ) $(SANDER_RISM_INTERFACE) \
-    les.o \
+    $(AMOEBAOBJ) les.o \
     spatial_recip.o spatial_fft.o parms.o softcore.o mbar.o linear_response.o molecule.o xref.o dssp.o \
     charmm.o crg_reloc.o barostats.o \
     qm_ewald.o qmmm_vsolv.o \
