remove some more unused code

--- a/src/rism/Makefile
+++ b/src/rism/Makefile
@@ -10,11 +10,10 @@ LIBOBJ = quaternion.o array_util.o rism_util.o rism_report_c.o \
 	rism3d_c.o rism3d_potential_c.o rism3d_restart.o \
 	rism3d_xyzv.o rism3d_opendx.o rism3d_ccp4.o \
 	rism3d_solvent_c.o rism3d_solute_c.o \
-	pubfft.o rism3d_fft.o rism_parm.o rism_io.o \
+	rism3d_fft.o rism_parm.o rism_io.o \
 	mdiis_orig_c.o mdiis_blas_c.o mdiis_blas2_c.o mdiis_c.o \
 	fce_c.o erfcfun.o safemem.o rism_timer_c.o constants.o \
-	getopts_c.o bspline.o  fftw3.o dsi.o dcpval.o \
-    amber_rism_interface.o
+	bspline.o  fftw3.o amber_rism_interface.o
 
 librism: $(LIBDIR)/librism.a
 
