further start on msander runmd simplification; update dhfr tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,7 @@
 test::
 	-(cd dhfr && ./Run.dhfr)
+	-(cd dhfr && ./Run.dhfr.min)
+	-(cd dhfr && ./Run.dhfr.xmin)
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
 
 clean::
