--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,9 @@ test::
 	-(cd dhfr && ./Run.dhfr)
 	-(cd dhfr && ./Run.dhfr.min)
 	-(cd dhfr && ./Run.dhfr.xmin)
+	-(cd middle-scheme/MD_Constr_Langevin_water && ./Run.LGV_LF)
+	-(cd middle-scheme/MD_Unconstr_Langevin_water && ./Run.LGV_LF)
+	-(cd middle-scheme/QMMM_Constr_ALA_Methol && Run.qmmm)
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
 
 clean::
