mostly get working with --intel --mpi --no-mkl

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,8 @@ install:
 	cd msander && $(MAKE) msander
 
 clean:
+	-(cd blas && $(MAKE) clean )
+	-(cd lapack && $(MAKE) clean )
 	-(cd arpack && $(MAKE) clean )
 	-(cd sqm && $(MAKE) clean )
 	-(cd rism && $(MAKE) clean )
