getting the basic test cases in good shape

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,10 +2,14 @@ test::
 	-(cd dhfr && ./Run.dhfr)
 	-(cd dhfr && ./Run.dhfr.min)
 	-(cd dhfr && ./Run.dhfr.xmin)
+	-(cd tip4p && ./Run.tip4p)
+	-(cd tip4p && ./Run.tip4p_mcbar)
 	-(cd middle-scheme/MD_Constr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/MD_Unconstr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/QMMM_Constr_ALA_Methol && Run.qmmm)
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
+	-(cd rism3d/2igd && ./Run.2igd.pme)
+	-(cd xray/2wcu && ./Run.2wcu)
 
 clean::
 	/bin/rm -f TEST_FAILURES.diff
