moving some things out of the lib folder

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -5,8 +5,7 @@ include ../config.h
 .SUFFIXES: .F .F90 .c .o
 
 OBJ=  \
-wallclock.o veclib.o amopen.o mexit.o nxtsec.o rgroup.o \
-rfree.o matinv.o
+wallclock.o veclib.o amopen.o mexit.o nxtsec.o rgroup.o rfree.o 
 
 #  default rules for Fortran and C compilation:
 
