first baby steps towards integrating ml.F90 into the code base

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -89,7 +89,7 @@ LESOBJ= \
 
 XRAY_OBJS = \
    xray_fftpack.o xray_FFT.o xray_fourier.o xray_globals.o xray_interface.o \
-   xray_real_space.o xray_reciprocal_space.o xray_utils.o
+   xray_real_space.o xray_reciprocal_space.o xray_utils.o ml.o
 
 .PHONY: dummy
 
