change lysine to crambin QMMM test case, so that it can be run in parallel

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,8 +7,8 @@ test::
 	-(cd middle-scheme/MD_Constr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/MD_Unconstr_Langevin_water && ./Run.LGV_LF)
 	-(cd middle-scheme/QMMM_Constr_ALA_Methol && Run.qmmm)
-	-(cd qmmm2/lysine_AM1 && ./Run.lysine)
-	-(cd qmmm2/lysine_AM1 && ./Run.lysine_md)
+	-(cd qmmm2/crambin_PM6 && ./Run.crambin)
+	-(cd qmmm2/crambin_PM6 && ./Run.crambin_md)
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
 	-(cd rism3d/2igd && ./Run.2igd.pme)
 	-(cd xray/2wcu && ./Run.2wcu)
