remove FFT, real_space, simplify reciprocal_space

--- a/src/msander/Makefile
+++ b/src/msander/Makefile
@@ -88,9 +88,8 @@ LESOBJ= \
     xminC.o 
 
 XRAY_OBJS = \
-   xray_fftpack.o xray_FFT.o xray_fourier.o xray_globals.o xray_interface.o \
-   xray_real_space.o xray_reciprocal_space.o xray_utils.o ml.o \
-   bulk_solvent.o
+   xray_fourier.o xray_globals.o xray_interface.o xray_utils.o ml.o \
+   xray_reciprocal_space.o bulk_solvent.o
 
 .PHONY: dummy
 
